--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,18 @@
 // Specific CSS for your home-page
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 700px;
+  margin-top: 200px;
+}
+
+.sign-up {
+  border: solid;
+  border-color: black;
+}
+
+.sign-in {
+  border: solid;
+  border-color: black;
+}
