--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <%= link_to "#", class: "navbar-brand" do %>
       <%= image_tag "https://www.premiere.fr/sites/default/files/styles/scale_crop_1280x720/public/2018-05/matrix_3.jpg" %>
     <% end %>
-    <h1 class="navbar-brand me-auto">Adopt a Wagoner</h1>
+    <h1 class="navbar-brand">Adopt a Wagoner</h1>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -12,12 +12,6 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <%# if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Login", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Create Account", "#", class: "nav-link" %>
-          </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
@@ -36,8 +30,11 @@
   </div>
 </div>
 <div class="container">
-  <div>
-    <h1>Trouvez les meilleurs Wagoners de tous les temps</h1>
+  <div class="sign-in">
+    <h1>TEST</h1>
+  </div>
+  <div class="sign-up">
+    <h1>TEST</h1>
   </div>
 </div>
 <div class="footer">
