--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,18 +1,15 @@
 // Specific CSS for your home-page
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 700px;
-  margin-top: 200px;
-}
+// .container {
+//   height:500px;
+//   overflow-y:auto;
+// }
 
-.sign-up {
-  border: solid;
-  border-color: black;
-}
+// .sign-up {
+//   border: solid;
+//   border-color: black;
+// }
 
-.sign-in {
-  border: solid;
-  border-color: black;
-}
+// .sign-in {
+//   border: solid;
+//   border-color: black;
+// }
