--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,15 +1,15 @@
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  background: #F4F4F4;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
-}
+// .footer {
+// //   position: fixed;
+// //   bottom: 0;
+// //   left: 0;
+// //   background: #F4F4F4;
+//   // display: flex;
+// //   align-items: center;
+//   // justify-content: space-between;
+//   height: 100px;
+// //   padding: 0px 50px;
+// //   color: rgba(0,0,0,0.3);
+// }
 .footer-links {
   display: flex;
   align-items: center;
@@ -28,6 +28,6 @@
   color: #D23333;
 }
 
-.footer-copyright {
-  margin-left: 250px;
-}
+// .footer-copyright {
+//   margin-left: 250px;
+// }
