--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid min-vh-100">
   <div class="row justify-content-md-center">
     <div class="col-12 col-sm-8 col-md-4">
       <h2 class="pt-3 text-center">Sign up</h2>
