--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,3 @@
-<div class="container">
-  <div class="sign-in">
-    <h1>TEST</h1>
-  </div>
-  <div class="sign-up">
-    <h1>TEST</h1>
-  </div>
+<div class="container-fluid min-vh-100">
+
 </div>
