--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="container border-top p-3" style="height: 100px">
+<div class="container border-top p-3">
   <div class="footer d-flex justify-content-around">
     <div class="footer-links">
       <a href="#"><i class="fab fa-github"></i></a>
