--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,6 +30,8 @@
         <div class="form-actions btn btn-primary">
           <%= f.button :submit, "Sign up" %>
         </div>
+        <p class="pt-3 fst-italic text-decoration-none"> Already registered ? Go to the <%= link_to "Sign in", "/users/sign_in"%> page !
+        </p>
       </div>
       <% end %>
     </div>
