--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,6 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "footer";
+@import "container-profile";
+@import "card";
+@import "form_user";
