Home page rebranded

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,37 @@
 <div class="container-fluid min-vh-100">
-
+  <div class="d-flex">
+    <div class="card-product m-3">
+      <div><%=image_tag 'https://avatars.githubusercontent.com/u/94960975?v=4'%>
+      </div>
+      <div class="card-product-infos">
+        <h2>Product name</h2>
+        <p>Product description with <strong>relevant info</strong> only.</p>
+      </div>
+    </div>
+    <div class="card-product m-3 justify-content-end">
+      <div class="card-product-infos">
+        <h2>Product name</h2>
+        <p>Product description with <strong>relevant info</strong> only.</p>
+      </div>
+      <div><%=image_tag 'https://avatars.githubusercontent.com/u/96064648?v=4'%>
+      </div>
+    </div>
+  </div>
+  <div>
+    <h1 class="text-center pt-5">Déjà 3 milliards d'entreprises recommandent Adopt a Wagonner</h1>
+  </div>
+  <div class="logos d-flex justify-content-between p-3" style="list-style: none;">
+      <%= image_tag 'https://i.servimg.com/u/f21/12/88/42/12/tm/snif11.gif', height: '110px', width: '145px', class: "pt-3" %>
+      <%= image_tag 'https://www.tomsguide.fr/content/uploads/sites/2/2017/01/2-samsoul-600x450.jpg', height: '110px', width: '145px', class: "pt-3" %>
+      <%= image_tag 'https://www.wepostmag.com/wp-content/uploads/2017/04/graphic-designer-recreates-popular-logos-reilly-2-58ee1da19e806-png__700.jpg', height: '110px', width: '145px', class: "pt-3" %>
+      <%= image_tag 'https://cdn.dribbble.com/users/56132/screenshots/1893870/low_cost_1x.png', height: '110px', width: '145px', class: "pt-3" %>
+  </div>
+  <div class="text-center fs-3 fst-italic pt-3">
+    <p class="">"Incroyables skills ! Merci à Lucas pour son expertise sur l'apéritif."<br>
+    <b>- Paul L'Emploie</b></p>
+    <p class="">"Incroyables skills ! Merci à Aurélie pour son expertise sur les frites."<br>
+    <b>- Jeff Pesos</b></p>
+    <p class="">"Incroyables skills ! Merci à Alexis pour son expertise sur les filtres Zoom."<br>
+    <b>- Elon Musc</b></p>
+  </div>
 </div>
