--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://www.premiere.fr/sites/default/files/styles/scale_crop_1280x720/public/2018-05/matrix_3.jpg" %>
+      <%= image_tag "logo.jpg" %>
     <% end %>
     <h1 class="navbar-brand">Adopt a Wagoner</h1>
 
