--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,3 +12,12 @@
   height: 40px;
   border-radius: 50%;
 }
+
+.navbar {
+  background-color: #FFE4C0;
+}
+
+.navbar-brand {
+  font-family: 'Oleo Script Swash Caps', cursive;
+  font-size: 60px;
+}
