--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,7 @@
 // Specific CSS for your home-page
-// .container {
-//   height:500px;
-//   overflow-y:auto;
-// }
+body {
+  background-color: white;
+}
 
 // .sign-up {
 //   border: solid;
