--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,13 +4,13 @@
       <div><%=image_tag 'https://avatars.githubusercontent.com/u/94960975?v=4'%>
       </div>
       <div class="card-product-infos">
-        <h2>Product name</h2>
+        <h2>Lucas Delpino</h2>
         <p>Product description with <strong>relevant info</strong> only.</p>
       </div>
     </div>
     <div class="card-product m-3 justify-content-end">
       <div class="card-product-infos">
-        <h2>Product name</h2>
+        <h2>Aurélie Tournay</h2>
         <p>Product description with <strong>relevant info</strong> only.</p>
       </div>
       <div><%=image_tag 'https://avatars.githubusercontent.com/u/96064648?v=4'%>
