--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -10,6 +10,10 @@
 // //   padding: 0px 50px;
 // //   color: rgba(0,0,0,0.3);
 // }
+
+.footer {
+  background-color: #FFE4C0;
+}
 .footer-links {
   display: flex;
   align-items: center;
@@ -27,7 +31,3 @@
 .footer .fa-heart {
   color: #D23333;
 }
-
-// .footer-copyright {
-//   margin-left: 250px;
-// }
