--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,13 +5,13 @@
       </div>
       <div class="card-product-infos">
         <h2>Lucas Delpino</h2>
-        <p>Product description with <strong>relevant info</strong> only.</p>
+        <p>Maitre de la <strong>pause</strong>, je serai à la hauteur de vos exigences.</p>
       </div>
     </div>
     <div class="card-product m-3 justify-content-end">
       <div class="card-product-infos">
         <h2>Aurélie Tournay</h2>
-        <p>Product description with <strong>relevant info</strong> only.</p>
+        <p>Spécialiste de la <strong>bière</strong>, je vous trouverai l'accord parfait.</p>
       </div>
       <div><%=image_tag 'https://avatars.githubusercontent.com/u/96064648?v=4'%>
       </div>
@@ -27,11 +27,11 @@
       <%= image_tag 'https://cdn.dribbble.com/users/56132/screenshots/1893870/low_cost_1x.png', height: '110px', width: '145px', class: "pt-3" %>
   </div>
   <div class="text-center fs-3 fst-italic pt-3">
-    <p class="">"Incroyables skills ! Merci à Lucas pour son expertise sur l'apéritif."<br>
+    <p class="">"Incroyables moments ! Merci à Lucas pour cette pause réparatrice."<br>
     <b>- Paul L'Emploie</b></p>
-    <p class="">"Incroyables skills ! Merci à Aurélie pour son expertise sur les frites."<br>
+    <p class="">"Incroyables skills ! Merci à Aurélie pour son expertise sur la binouze."<br>
     <b>- Jeff Pesos</b></p>
-    <p class="">"Incroyables skills ! Merci à Alexis pour son expertise sur les filtres Zoom."<br>
+    <p class="">"Incroyables connaissances ! Merci à Alexis pour sa maîtrise des filtres Zoom."<br>
     <b>- Elon Musc</b></p>
   </div>
 </div>
