--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
 <div class="footer p-3">
   <div class="footer d-flex justify-content-around">
     <div class="footer-links">
-      <a href="https://www.instagram.com/jeffbezos/?hl=fr"><i class="fab fa-instagram" data-toggle="tooltip" data-placement="top" title="Thibault Bayard"></i></a>
-      <a href="https://twitter.com/elonmusk"><i class="fab fa-twitter" data-toggle="tooltip" data-placement="top" title="Thomas Henriet"></i></a>
-      <a href="https://www.linkedin.com/company/poleemploi/"><i class="fab fa-linkedin" data-toggle="tooltip" data-placement="top" title="Futur Employeur"></i></a>
+      <a href="https://www.instagram.com/jeffbezos/?hl=fr" target="_blank"><i class="fab fa-instagram" data-toggle="tooltip" data-placement="top" title="Thibault Bayard" ></i></a>
+      <a href="https://twitter.com/elonmusk" target="_blank"><i class="fab fa-twitter" data-toggle="tooltip" data-placement="top" title="Thomas Henriet" ></i></a>
+      <a href="https://www.linkedin.com/company/poleemploi/" target="_blank"><i class="fab fa-linkedin" data-toggle="tooltip" data-placement="top" title="Futur Employeur" ></i></a>
     </div>
     <div class="footer-copyright align-self-center">
       This footer is made with <i class="fas fa-heart"></i> by Thomas and Thibault
