--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
         <i class="fas fa-star-half-alt"></i> %>
         <h6 class="card-subtitle mb-2 text-muted">Entrepreneur Expert</h6>
         <p class="card-text"><%= @user.description %></p>
-        <%= link_to 'Edit my profile', edit_user_path(@user) %>
+        <%= link_to 'Edit my profile', edit_user_path(@user), class: "btn"  %>
       </div>
     </div>
   </div>
