--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,11 @@
 // Specific CSS for your home-page
 body {
-  background-color: white;
+  background-color: rgb(245, 245, 245);
+}
+
+#carouselExampleControls {
+  width: 250px;
+  height: 250px;
 }
 
 // .sign-up {
