--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
       <a href="https://www.linkedin.com/company/poleemploi/" target="_blank"><i class="fab fa-linkedin" data-toggle="tooltip" data-placement="top" title="Futur Employeur" ></i></a>
     </div>
     <div class="footer-copyright align-self-center">
-      This footer is made with <i class="fas fa-heart"></i> by Thomas and Thibault
+      Ce footer a été copié avec <i class="fas fa-heart"></i> par Thomas and Thibault
     </div>
   </div>
 </div>
