--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,30 @@
 <div class="container-fluid min-vh-100">
-  <div class="d-flex">
-    <div class="card-product m-3">
-      <div><%=image_tag 'https://avatars.githubusercontent.com/u/94960975?v=4'%>
+  <div id="carouselExampleControls" class="carousel slide mx-auto pt-3" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://avatars.githubusercontent.com/u/94960975?v=4" class="d-block w-100" alt="...">
+        <p>Maitre de la <strong>pause</strong>, je serai à la hauteur de vos exigences.</p>
       </div>
-      <div class="card-product-infos">
-        <h2>Lucas Delpino</h2>
+      <div class="carousel-item">
+        <img src="https://avatars.githubusercontent.com/u/96064648?v=4" class="d-block w-100" alt="...">
+        <p>Maitre de la <strong>pause</strong>, je serai à la hauteur de vos exigences.</p>
+      </div>
+      <div class="carousel-item">
+        <img src="https://avatars.githubusercontent.com/u/94960975?v=4" class="d-block w-100" alt="...">
         <p>Maitre de la <strong>pause</strong>, je serai à la hauteur de vos exigences.</p>
       </div>
     </div>
-    <div class="card-product m-3 justify-content-end">
-      <div class="card-product-infos">
-        <h2>Aurélie Tournay</h2>
-        <p>Spécialiste de la <strong>bière</strong>, je vous trouverai l'accord parfait.</p>
-      </div>
-      <div><%=image_tag 'https://avatars.githubusercontent.com/u/96064648?v=4'%>
-      </div>
-    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div><br><br><br><br>
+  <div class="d-grid col-3 mx-auto pt-20">
+    <button class="btn"><%= link_to "Voir tous les Wagonners", "/offers" %></button>
   </div>
   <div>
     <h1 class="text-center pt-5">Déjà 3 milliards d'entreprises recommandent Adopt a Wagonner</h1>
@@ -26,7 +35,7 @@
       <%= image_tag 'https://www.wepostmag.com/wp-content/uploads/2017/04/graphic-designer-recreates-popular-logos-reilly-2-58ee1da19e806-png__700.jpg', height: '110px', width: '145px', class: "pt-3" %>
       <%= image_tag 'https://cdn.dribbble.com/users/56132/screenshots/1893870/low_cost_1x.png', height: '110px', width: '145px', class: "pt-3" %>
   </div>
-  <div class="text-center fs-3 fst-italic pt-3">
+  <div class="text-center fs-3 fst-italic pt-4">
     <p class="">"Incroyables moments ! Merci à Lucas pour cette pause réparatrice."<br>
     <b>- Paul L'Emploie</b></p>
     <p class="">"Incroyables skills ! Merci à Aurélie pour son expertise sur la binouze."<br>
