--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,17 +15,17 @@
           <li class="nav-item dropdown">
             <%= image_tag "", class: "avatar dropdown-toggle fa-solid fa-user-tie", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Offers", "/offers", class: "dropdown-item" %>
-              <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+              <%= link_to "Les Wagonners", "/offers", class: "dropdown-item" %>
+              <%= link_to "Profil", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Se Déconnecter", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
           <li class="nav-item dropdown">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= image_tag "", class: "avatar dropdown-toggle fa-solid fa-user-tie", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Sign in", "/users/sign_in", class: "dropdown-item" %>
-              <%= link_to "Sign up", "/users/sign_up", class: "dropdown-item" %>
+              <%= link_to "Se Connecter", "/users/sign_in", class: "dropdown-item" %>
+              <%= link_to "S'enregistrer", "/users/sign_up", class: "dropdown-item" %>
           </li>
         <% end %>
       </ul>
