--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -50,17 +50,17 @@
 .card-offer {
   background-color: white;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  color: white;
+  color: black;
   font-weight: bolder;
-  text-shadow: 0 0 10px rgba(0,0,0,0.7);
   padding-bottom: 0px;
   position: relative;
+  border-radius: 16px;
 }
 .cards-offers {
   padding: 16px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 16px;
+  grid-gap: 32px;
   flex-grow: 1;
 }
 
@@ -71,6 +71,12 @@
   display: flex;
   align-items: end;
   padding: 10px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.card-image:hover {
+  opacity: 0.7;
 }
 
 .card-skill {
@@ -80,7 +86,7 @@
 }
 
 .card-description {
-  padding: 10px;
+  padding: 20px 15px 15px 15px;
 }
 
 .btn-skill {
@@ -99,14 +105,6 @@
 .buttons {
   display: flex;
   justify-content: space-between;
-}
-
-.card-link {
-  position: absolute;
-  top: 110px;
-  right: 180px;
-  opacity: 0;
-  text-decoration: none;
 }
 
 .card-offer:hover {
@@ -138,4 +136,13 @@ a:hover {
 .btn:hover {
   color: white;
   opacity: 0.8;
+}
+
+.rating-stars {
+  padding-bottom: 5px;
+  color: gold;
+}
+
+.card-title {
+  font-weight: bold;
 }
