--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,20 +1,29 @@
 <div class="container-fluid min-vh-100">
+  <h1 class="offers-title">Plus de 15 Wagonners aux talents exceptionnels disponibles !</h1>
   <div class="container-index-offers">
   <%# <div class="row">
   <div class="col"> %>
     <div class="cards-offers">
       <% @offers.each do |offer| %>
         <div class="card-offer">
-          <p class="card-link"><%= link_to 'See more', offer_path(offer)%></p>
-          <div class="card-image" style="background-image: url(https://kitt.lewagon.com/placeholder/users/ondine-dbn)">
-            <h5 class="card-title"><%= offer.title%> </h5>
-          </div>
+          <%= link_to offer_path(offer) do %>
+            <div class="card-image" style="background-image: url(<%= offer.picture %>)">
+              <h5 class="card-title"><%= offer.title %> </h5>
+            </div>
+          <% end %>
+
             <div class="card-description">
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star-half-alt"></i>
-              <h6 class="card-subtitle mb-2 text-muted"><%= offer.description %></h6>
+              <div class="rating-stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+              </div>
+              <h6><%= offer.description %></h6>
               <%# <div class="buttons"> %>
-              <button class="btn-skill"><%= offer.skill %></button>
+              <% skills = offer.skill.split %>
+              <% skills.each do |skill| %>
+                <button class="btn-skill"><%= skill %></button>
+              <% end %>
                 <%# <button class="btn-booking">See more</button> %>
               <%# </div> %>
             </div>
