--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -16,6 +16,12 @@
       </div>
     </div>
   </div>
+  <div class="container-reviews d-flex flex-column align-items-center">
+    <% @offer.reviews.each do |review| %>
+     <div><%= review.content %></div>
+     <div><%= review.rating %></div>
+    <% end %>
+  </div>
     <form action="/offers/:offer_id/bookings" method="post">
       <div class="form-row">
         <div class="col">
@@ -31,6 +37,7 @@
       </div>
       <%# <button type="submit" class="btn btn-primary mt-3">Submit</button> %>
     </form>
+
     <div class="box">
       <a href="#popup" class="button">Book a dev</a>
     </div>
