--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,79 @@
         <i class="fas fa-star-half-alt"></i> %>
         <h6 class="card-subtitle mb-2 text-muted">Entrepreneur Expert</h6>
         <p class="card-text"><%= @user.description %></p>
-        <%= link_to 'Edit my profile', edit_user_path(@user), class: "btn"  %>
+        <%= link_to 'Modifier mon profil', edit_user_path(@user), class: "btn"  %>
       </div>
     </div>
   </div>
+
+  <div class="container-profile">
+    <div class="card" style="width: 24rem;">
+      <h5>Mes réservations</h5>
+      <% @user.bookings.each do |booking| %>
+        <ul class="p-0" style="list-style:none">
+        <li>
+        <i class='fa fa-calendar'></i> <%= booking.start_date %>
+        <%= booking.end_date %>
+        </li>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+
+
+<div class="calendar-container">
+  <div class="calendar-header">
+    <h1>
+       Mai
+      <button>▾</button>
+    </h1>
+    <p>2022</p>
+  </div>
+  <div class="calendar"><span class="day-name">Lun</span><span class="day-name">Mar</span><span class="day-name">Mer</span><span class="day-name">Jeu</span><span class="day-name">Ven</span><span class="day-name">Sam</span><span class="day-name">Dim</span>
+    <div class="day day--disabled">30</div>
+    <div class="day day--disabled">31</div>
+    <div class="day">1</div>
+    <div class="day">2</div>
+    <div class="day">3</div>
+    <div class="day">4</div>
+    <div class="day">5</div>
+    <div class="day">6</div>
+    <div class="day">7</div>
+    <div class="day">8</div>
+    <div class="day">9</div>
+    <div class="day">10</div>
+    <div class="day">11</div>
+    <div class="day">12</div>
+    <div class="day">13</div>
+    <div class="day">14</div>
+    <div class="day">15</div>
+    <div class="day">16</div>
+    <div class="day">17</div>
+    <div class="day">18</div>
+    <div class="day">19</div>
+    <div class="day">20</div>
+    <div class="day">21</div>
+    <div class="day">22</div>
+    <div class="day">23</div>
+    <div class="day">24</div>
+    <div class="day">25</div>
+    <div class="day">26</div>
+    <div class="day">27</div>
+    <div class="day">28</div>
+    <div class="day">29</div>
+    <div class="day">30</div>
+    <div class="day">31</div>
+    <div class="day day--disabled">1</div>
+    <div class="day day--disabled">2</div>
+    <section class="task task--warning">Projects</section>
+    <section class="task task--danger">Design Sprint</section>
+    <section class="task task--primary">Product Checkup 1
+      <div class="task__detail">
+        <h2>Product Checkup 1</h2>
+        <p>15-17th November</p>
+      </div>
+    </section>
+    <section class="task task--info">Product Checkup 2</section>
+  </div>
+</div>
 </div>
