front, cleaning, search bar

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -10,6 +10,5 @@
 @import "form_user";
 @import "fake";
 @import "form_review";
-@import "calendar";
 @import "fonts";
-
+@import "container-booking";
