--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,8 +2,8 @@
   <div class="container-form">
     <div class="card-form">
       <%= simple_form_for @user do |f| %>
-        <%= f.input :description, label: 'Write your new description' %>
-        <%= f.submit 'Edit my profile', id: 'btn-form' %>
+        <%= f.input :description, label: 'Tu collectionnes les cartes Pokémon ou tu es un accro du sport ? Décris toi !' %>
+        <%= f.submit 'Modifier mon profil', id: 'btn-form' %>
       <% end %>
     </div>
   </div>
