--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,9 +1,21 @@
-<div class="container">
-  <%= simple_form_for [ @offer, @booking ] do |f| %>
-  <%= f.date_field :start_date %>
-  <%= f.date_field :end_date %>
-  <%= f.submit "Confirmer les dates", class: "btn-ghost" %>
-  <% end %>
+<div class="container-fluid min-vh-100">
+  <div class="container" style="text-align: center">
+    <div class="card-booking">
+      <h2>Tu as choisis <strong><%= @offer.title %></strong> !</h1>
+      <img class ="avatar" src="<%= @offer.picture %>" style="width: 100px">
+      <p></p>
+      <h2>Choisis tes dates</h2>
+      <p></p>
+      <div class="container-booking">
+        <%= simple_form_for [ @offer, @booking ] do |f| %>
+        <%= f.date_field :start_date %>
+        <%= f.date_field :end_date %></div>
+        <p></p>
+        <p style="text-align: center"><%= f.submit "Confirmer", class: "btn" %></p>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </div>
 
     <%# <form action="/offers/:offer_id/bookings" method="post">
