--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid min-vh-100">
   <h1 class="offers-title" style="text-align: center">Plus de 15 Wagonners aux talents exceptionnels disponibles !</h1>
   <h2 style="text-align: center">Trouve un Wagonner avec des compétences spécifiques</h2>
-  <p></p>
+  <br>
     <div class="container-search">
       <%= form_tag offers_path, method: :get do %>
       <%= text_field_tag :query,
@@ -9,7 +9,7 @@
         class: "form-control",
         placeholder: "Tape le language qu'il te faut, ex : Ruby, CSS..."
       %>
-      <p></p>
+      <br>
       <p style="text-align: center"><%= submit_tag "C'est parti !", class: "btn" %></p>
       <% end %>
     </div>
@@ -29,7 +29,9 @@
               <div class="rating-stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
-                <i class="fas fa-star-half-alt"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
               </div>
               <h6><%= offer.description %></h6>
               <%# <div class="buttons"> %>
