fixed link color

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -117,14 +117,18 @@
   }
 }
 
-a {
-  color: white;
-  text-decoration: none;
-  text-shadow: none;
-}
+// a {
+//   text-decoration: none;
+//   text-shadow: none;
+// }
 
 a:hover {
   color: white;
+}
+
+a {
+  color: white;
+  text-decoration: none;
 }
 
 .btn {
