--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,10 +27,10 @@
       </div>
 
       <div class="text-center">
-        <div class="form-actions btn btn-primary">
+        <div class="form-actions btn btn">
           <%= f.button :submit, "Sign up" %>
         </div>
-        <p class="pt-3 fst-italic text-decoration-none"> Already registered ? Go to the <%= link_to "Sign in", "/users/sign_in"%> page !
+        <p class="pt-3 fst-italic text-decoration-none"> Already registered ? Go to the <%= link_to "Sign in", "/users/sign_in", class: "btn"%> page !
         </p>
       </div>
       <% end %>
