--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,15 +3,19 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="https://avatars.githubusercontent.com/u/94960975?v=4" class="d-block w-100" alt="...">
-        <p>Maitre de la <strong>pause</strong>, je serai à la hauteur de vos exigences.</p>
+        <p>J'ai masterisé la pause réparatrice</p>
       </div>
       <div class="carousel-item">
         <img src="https://avatars.githubusercontent.com/u/96064648?v=4" class="d-block w-100" alt="...">
-        <p>Maitre de la <strong>pause</strong>, je serai à la hauteur de vos exigences.</p>
+        <p>Experte en bière et en code</p>
       </div>
       <div class="carousel-item">
-        <img src="https://avatars.githubusercontent.com/u/94960975?v=4" class="d-block w-100" alt="...">
-        <p>Maitre de la <strong>pause</strong>, je serai à la hauteur de vos exigences.</p>
+        <img src="https://res.cloudinary.com/wagon/image/upload/c_fill,g_face,h_200,w_200/v1642097921/d0eicmhykqntxw0aapbg.jpg" class="d-block w-100" alt="...">
+        <p>Une seule chose à dire : je ne commit pas sur master</p>
+      </div>
+      <div class="carousel-item">
+        <img src="https://avatars.githubusercontent.com/u/55495612?v=4" class="d-block w-100" alt="...">
+        <p>Le commit sur master, plus qu'une passion</p>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
