--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -24,9 +24,9 @@
       <div class="col">
         <div class="container-reviews d-flex flex-column align-items-center">
           <% @offer.reviews.each do |review| %>
-            <div class="container-review align-items-center bg-light border w-100">
-              <div class="text-center"><%= review.content %></div>
-                <div class="text-center">
+            <div class="container-review align-items-center bg-white border w-100">
+              <div class="text-center pt-3 px-3"><%= review.content %></div>
+                <div class="text-center pb-3">
                   <% review.rating.to_i.times do  %>
                     <i class="bi bi-star-fill"></i>
                   <% end %>
@@ -35,13 +35,13 @@
             <br>
           <% end %>
             </div>
-            <div class="text-center pt-3">
+            <div class="cell-bottom text-center pt-3 align-text-bottom">
               <div class="btn"><%= link_to 'Lache un com', new_offer_review_path(@offer)%></div>
             </div>
       </div>
     </div>
   </div>
   <div class="text-center pt-3">
-    <div class="btn rounded w-50"><%= link_to 'Book this dev', new_offer_booking_path(@offer) %></div>
+    <div class="btn rounded w-50"><%= link_to 'Réserver ce dev', new_offer_booking_path(@offer) %></div>
   </div>
 </div>
