--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -24,3 +24,10 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+.avatar-users {
+  width: 240px;
+  border-radius: 50%;
+  margin-bottom: 50px;
+  margin-top: 20px
+}
