--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,12 @@ body {
   height: 250px;
 }
 
+.carousel-item p {
+  text-align: center;
+  font-size: large;
+  font-style: italic;
+  padding-top: 8px;
+}
 // .sign-up {
 //   border: solid;
 //   border-color: black;
