--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container-fluid min-vh-100">
-  <h1 class="offers-title" style="text-align: center">Plus de 15 Wagonners aux talents exceptionnels disponibles !</h1>
+  <h1 class="offers-title" style="text-align: center"> <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" width="80px"/> Plus de 15 Wagonners aux talents exceptionnels disponibles ! <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" width="80px" /></h1>
+  <br>
   <h2 style="text-align: center">Trouve un Wagonner avec des compétences spécifiques</h2>
   <br>
     <div class="container-search">
