--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,19 +3,19 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="https://avatars.githubusercontent.com/u/94960975?v=4" class="d-block w-100" alt="...">
-        <p>J'ai masterisé la pause réparatrice</p>
+        <p>"J'ai masterisé la pause réparatrice"</p>
       </div>
       <div class="carousel-item">
         <img src="https://avatars.githubusercontent.com/u/96064648?v=4" class="d-block w-100" alt="...">
-        <p>Experte en bière et en code</p>
+        <p>"Experte en bière et en code"</p>
       </div>
       <div class="carousel-item">
         <img src="https://res.cloudinary.com/wagon/image/upload/c_fill,g_face,h_200,w_200/v1642097921/d0eicmhykqntxw0aapbg.jpg" class="d-block w-100" alt="...">
-        <p>Une seule chose à dire : je ne commit pas sur master</p>
+        <p>"Une seule chose à dire : je ne commit pas sur master"</p>
       </div>
       <div class="carousel-item">
         <img src="https://avatars.githubusercontent.com/u/55495612?v=4" class="d-block w-100" alt="...">
-        <p>Le commit sur master, plus qu'une passion</p>
+        <p>"Le commit sur master, plus qu'une passion"</p>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -31,9 +31,9 @@
     <button class="btn"><%= link_to "Voir tous les Wagonners", "/offers" %></button>
   </div>
   <div>
-    <h1 class="text-center pt-5">Déjà 3 milliards d'entreprises recommandent Adopt a Wagonner</h1>
+    <h1 class="text-center pt-5 pb-3">Déjà 3 milliards d'entreprises recommandent Adopt a Wagonner</h1>
   </div>
-  <div class="logos d-flex justify-content-between p-3" style="list-style: none;">
+  <div class="logos d-flex justify-content-between p-3 bg-white" style="list-style: none;">
       <%= image_tag 'https://i.servimg.com/u/f21/12/88/42/12/tm/snif11.gif', height: '110px', width: '145px', class: "pt-3" %>
       <%= image_tag 'https://www.tomsguide.fr/content/uploads/sites/2/2017/01/2-samsoul-600x450.jpg', height: '110px', width: '145px', class: "pt-3" %>
       <%= image_tag 'https://www.wepostmag.com/wp-content/uploads/2017/04/graphic-designer-recreates-popular-logos-reilly-2-58ee1da19e806-png__700.jpg', height: '110px', width: '145px', class: "pt-3" %>
