--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <div class="card mx-auto" style="width: 24rem;">
+        <div class="card mx-auto mb-2" style="width: 24rem;">
           <div class="card-body">
             <img class="avatar-xtralarge" alt="avatar-large" src="<%= @offer.picture %>" />
             <h5 class="card-title pt-2"><%= @offer.title%> </h5>
@@ -20,28 +20,28 @@
             </div>
           </div>
         </div>
+        <div class="text-center pt-3">
+          <div class="btn rounded w-50 "><%= link_to 'Réserver ce dev', new_offer_booking_path(@offer) %></div>
+        </div>
       </div>
       <div class="col">
         <div class="container-reviews d-flex flex-column align-items-center">
           <% @offer.reviews.each do |review| %>
-            <div class="container-review align-items-center bg-white border w-100">
+            <div class="container-review align-items-center bg-white border w-100 my-2">
               <div class="text-center pt-3 px-3"><%= review.content %></div>
-                <div class="text-center pb-3">
+                <div class="text-center py-3">
                   <% review.rating.to_i.times do  %>
                     <i class="bi bi-star-fill"></i>
                   <% end %>
                 </div>
-              </div>
             <br>
+            </div>
           <% end %>
-            </div>
-            <div class="cell-bottom text-center pt-3 align-text-bottom">
-              <div class="btn"><%= link_to 'Lache un com', new_offer_review_path(@offer)%></div>
-            </div>
+        </div>
+        <div class="text-center pt-3">
+          <div class="btn rounded"><%= link_to 'Lache un com', new_offer_review_path(@offer)%></div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="text-center pt-3">
-    <div class="btn rounded w-50"><%= link_to 'Réserver ce dev', new_offer_booking_path(@offer) %></div>
   </div>
 </div>
