--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -31,7 +31,7 @@
               <div class="text-center pt-3 px-3"><%= review.content %></div>
                 <div class="text-center py-3">
                   <% review.rating.to_i.times do  %>
-                    <i class="bi bi-star-fill"></i>
+                    <i class="fas fa-star"></i>
                   <% end %>
                 </div>
             <br>
