--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -3,17 +3,17 @@
     <div class="card-booking">
       <h2>Tu as choisis <strong><%= @offer.title %></strong> !</h1>
       <img class ="avatar" src="<%= @offer.picture %>" style="width: 100px">
-      <p></p>
+      <br>
       <h2>Choisis tes dates</h2>
-      <p></p>
+      <br>
       <div class="container-booking">
         <%= simple_form_for [ @offer, @booking ] do |f| %>
-        <%= f.date_field :start_date %>
-        <%= f.date_field :end_date %></div>
-        <p></p>
-        <p style="text-align: center"><%= f.submit "Confirmer", class: "btn" %></p>
+          <%= f.date_field :start_date %>
+          <%= f.date_field :end_date, class:"mx-2" %>
+          <%= f.submit "Confirmer", class: "btn text-center" %>
         <% end %>
       </div>
+      <br>
     </div>
   </div>
 </div>
